# assay

./: .assayignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QA_CONTRACT.md  README.md  README_ASSAY_RECEIPTS.md  REPO_CHARTER.md  SECURITY.md  SECURITY_FINDINGS.md  demo.tape  pyproject.toml  pytest.ini
.github/: qa_contract.yaml
assay_openclaw_demo/: DEMO_SUMMARY.json  openclaw_session.jsonl
conformance/: .gitignore  generate_corpus.py  run_corpus.py
contracts/: judge-comparability-v2-draft.yaml
docs/: ASSAY_DECISION_LOG.md  ASSAY_DEEP_DIVE_2026Q1.md  ASSAY_OWNERS_MANUAL.md  BOUNDARY_MAP.md  CANONICAL_EVIDENCE_SEMANTICS_MATRIX.md  DECISION_RECEIPT_V0.md  FULL_PICTURE.md  GOLDEN_PATH.md  ORDER_OF_OPERATIONS.md  PILOT_PROGRAM.md  PRODUCT_ROADMAP.md  PROOF_PACK_SPRINT_ONE_PAGER.md  PROOF_POSTURE.md  README_quickstart.md  RELEASE_NOTES_PASSPORT.md  REPO_MAP.md  ROADMAP.md  SCANNER_LIMITATIONS.md  SEMANTIC_SIMULATION_MATRIX.md  START_HERE.md  THEORY_TO_FEATURE_ATLAS.md  TRUST_POLICY_CONSTITUTION.md  TRUST_UNDER_ATTACK.md  WHAT_ASSAY_DOES_TODAY.md  WHY_CONTRACT.md  assay_domain_audit_adjudication.md  assay_hash_signature_surface_map.md  assay_master_plan.md  assay_v2_migration_sketch.md  catalog.yaml  ci-integration.md  claim-gate-v0.md  claim-preflight-matrix-v0.md  commitments-slice1-claim-sheet.md  compliance-citations.md  decision-escrow.html  decision-escrow.md  derived-context-quickstart.md  dogfood-pr-gate-real-pr-proof.md  evidence-readiness.html  (+34 more)
examples/: assay_quickstart.py  byte_flip_demo.py  proof_pack_demo.py  settlement_gate.py
receipts/: 2026-03-25-adversarial-specimen.md  2026-03-25-contract-reconciliation.md  2026-03-25-dead-code-removal.md  2026-03-25-golden-pack-specimen.md  2026-03-25-layer-extraction.md  2026-03-25-ocd1-and-strategy.md  2026-03-25-ts-verifier-and-stabilization.md  2026-03-26-compiled-packet-v1.md  2026-03-26-schema-gate-implementation-choice.md  2026-03-26-schema-gate-implementation-receipt.md  2026-03-26-schema-validation-depth-parity-map.md  2026-03-26-verifier-trust-boundary-fixes.md  2026-03-27-compiled-packet-canonical-surface.md  2026-03-27-subject-binding-gate.md  (+5 more)
scripts/: assay-gate.sh  (+13 more)
(+873 files in other folders)
