[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assay-ai"
version = "1.4.2"
description = "Receipt-native AI safety toolkit"
authors = [
    { name = "Tim Bhaserjian", email = "tim2208@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["ai", "safety", "audit", "receipts", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyNaCl>=1.5.0",
    "jsonschema>=4.17.0",
    "referencing>=0.30.0",
    "packaging>=21.0",
]

[project.urls]
"Homepage" = "https://github.com/Haserjian/assay"
"Repository" = "https://github.com/Haserjian/assay"
"Bug Tracker" = "https://github.com/Haserjian/assay/issues"
"Documentation" = "https://github.com/Haserjian/assay/blob/main/docs/README_quickstart.md"

[project.scripts]
assay = "assay.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
langchain = ["langchain-core>=0.1.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0", "langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["assay*"]

[tool.setuptools.package-data]
assay = ["schemas/*.json"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["nacl", "nacl.*"]
ignore_missing_imports = true
